[package]
name = "uneval"
version = "0.2.4"
authors = ["Cerber Ursi <dev+rust@cerbe.ru>"]
edition = "2024"
description = "Serde serializer to embed data as Rust code"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Cerber-Ursi/uneval"
categories = ["development-tools::build-utils"]

[dependencies]
serde = "1.0"
thiserror = "2.0"

[dev-dependencies]
batch_run = "1.2"
toml = "1.1"
