[workspace]
members = ["uneval-derive"]

[package]
name = "uneval"
version = "0.3.0"
authors = ["Cerber Ursi <dev+rust@cerbe.ru>"]
edition = "2024"
description = "Embed Rust values as compile-time-evaluable Rust source code"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Cerber-Ursi/uneval"
categories = ["development-tools::build-utils"]

[features]
url = ["dep:url"]

[dependencies]
uneval-derive = { path = "uneval-derive", version = "0.3.0" }
url = { version = "2", optional = true }

[dev-dependencies]
batch_run = "1.2"
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
